fix overflow on mobile

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -27,6 +27,16 @@ header {
   padding: 15px;
 }
 
+pre:not(.twoslash),
+.twoslash .twoslash-popup-code {
+  max-width: 100vw;
+  overflow-x: auto;
+}
+
+.no-jsdoc.twoslash .twoslash-popup-docs {
+  display: none;
+}
+
 [data-theme="dark"] {
   .shiki,
   .shiki span {
